# ai-workflow-automation-demo

./: .env.datadog  .env.dev  .env.example  .env.prod  .env.stage  Dockerfile  Dockerfile.dev  README.md  app.py  config.py  datadog_config.py  datadog_dashboards.py  datadog_monitoring.py  docker-compose.yml  init-s3.py  main.py  models.py  pyproject.toml  requirements.txt  s3_polling.py  sample_data.csv  tasks.py
.github/workflows/: build-deploy.yml  build-only.yaml  lint.yml  linter.yml  tests.yml
aws/: setup-infrastructure.sh  task-definition-dev.json  task-definition-prod.json  task-definition-stage.json
config/: dev.yaml  prod.yaml  stage.yaml
deploy/docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  SETUP.md
scripts/: create_sample_data.py  migrate_db.py
src/: config.py  logging_config.py  main.py
src/api/: health.py  middleware.py
src/api/v1/: csv_ingestion.py  results.py  router.py  s3_routes.py  status.py
src/core/: classifier.py  processor.py  report_generator.py  validator.py
src/models/: enums.py  schemas.py
src/queue/: celery_app.py  tasks.py  worker.py
src/services/: datadog_dashboards.py  datadog_monitoring.py  datadog_service.py  llm_service.py  s3_service.py
src/utils/: csv_parser.py  exceptions.py  helpers.py
templates/: index.html
tests/: conftest.py  test_moto_s3.py
tests/api/: test_health.py  test_status.py
tests/core/: test_classifier.py  test_processor.py  test_validator.py
tests/models/: test_schemas.py
tests/services/: test_datadog_service.py
tests/utils/: test_csv_parser.py
